--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('produit/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_produit_index') }}">back to list</a>
+    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to List</button>
 
     {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
