--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -34,9 +34,8 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_produit_index') }}">back to list</a>
-
-    <a href="{{ path('app_produit_edit', {'id': produit.id}) }}">edit</a>
+    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to list</button>
+    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_edit', {'id': produit.id}) }}'">Edit</button>
 
     {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
