--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,17 +3,38 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="container">
+        <div class="mx-auto mt-5" style="max-width: 400px;">
+            <h1 class="h3 mb-3 font-weight-normal text-center">Register</h1>
 
-    {{ form_errors(registrationForm) }}
+            {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_start(registrationForm) }}
+            <div class="form-group">
+                {{ form_row(registrationForm.email, { 'attr': {'class': 'form-control', 'placeholder': 'Email'} }) }}
+            </div>
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+            <div class="form-group">
+                {{ form_row(registrationForm.nom, { 'attr': {'class': 'form-control', 'placeholder': 'Nom'} }) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_row(registrationForm.prenom, { 'attr': {'class': 'form-control', 'placeholder': 'Prenom'} }) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_row(registrationForm.plainPassword, { 'attr': {'class': 'form-control', 'placeholder': 'Password'} , 'label': 'Password'}) }}
+            </div>
+
+            <div class="form-check mt-3">
+                {{ form_row(registrationForm.agreeTerms, { 'label_attr': {'class': 'form-check-label'}, 'attr': {'class': 'form-check-input'} }) }}
+            </div>
+
+
+            <p class="mt-2">Déjà inscrit ? <a href="{{ path('app_login') }}">se connecter</a></p>
+
+            <button type="submit" class="btn btn-lg btn-primary btn-block mt-1">Register</button>
+            {{ form_end(registrationForm) }}
+        </div>
+    </div>
 {% endblock %}
