--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Produit index{% endblock %}
 
 {% block body %}
-    <h1>Produit index</h1>
+    <h1>Produit</h1>
 
-    <table class="table">
+    <table class="table table-dark table-hover">
         <thead>
             <tr>
                 <th>Id</th>
