--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -31,9 +31,9 @@
             </div>
 
 
-            <p class="mt-2">Déjà inscrit ? <a href="{{ path('app_login') }}">se connecter</a></p>
+            <p class="mt-2">Déjà inscrit ? <a href="{{ path('app_login') }}">Se connecter</a></p>
 
-            <button type="submit" class="btn btn-lg btn-primary btn-block mt-1">Register</button>
+            <button type="submit" class="btn btn-lg btn-dark btn-block mt-1">Register</button>
             {{ form_end(registrationForm) }}
         </div>
     </div>
