--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,9 +28,9 @@
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                <p>Pas encore inscrit ? <a href="{{ path('app_register') }}">s'inscrire</a></p>
+                <p>Pas encore inscrit ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
 
-                <button class="btn btn-lg btn-primary btn-block mt-3" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-dark btn-block mt-3" type="submit">Sign in</button>
             </div>
         </form>
     </div>
