[Feature] - Begin cart

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav mr-auto ">
                         <li class="nav-item dropdown">
                             {% if app.user %}
-                                <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link" href="{{ path('app_user_show',{'id':app.user.id}) }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     {{ app.user.nom ~ " " ~ app.user.prenom }}
                                 </a>
                             {% else %}
@@ -46,7 +46,11 @@
                 </div>
             </nav>
         </header>
-
+        {% for type, messages in app.flashes %}
+            {% for msg in messages %}
+                <p class="alert alert-{{ type }}"> {{ msg }}</p>
+            {% endfor %}
+        {% endfor %}
         {% block body %}
         {% endblock %}
     </body>
