--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -3,11 +3,26 @@
 {% block title %}Edit Produit{% endblock %}
 
 {% block body %}
-    <h1>Edit Produit</h1>
+    <div class="container">
+        <div class="mx-auto mt-5" style="max-width: 400px;">
+            <h1 class="h3 mb-3 font-weight-normal text-center">Edit Produit</h1>
 
-    {{ include('produit/_form.html.twig', {'button_label': 'Update'}) }}
+            {{ form_start(form) }}
+            <div class="form-group">
+                {{ form_widget(form, { 'attr': {'class': 'form-control'} }) }}
+            </div>
 
-    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to List</button>
+            {{ form_end(form) }}
 
-    {{ include('produit/_delete_form.html.twig') }}
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="btn btn-dark btn-block mt-3" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to List</button>
+                </div>
+
+                <div class="col">
+                    {{ include('produit/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
