--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,36 +3,55 @@
 {% block title %}User{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <div class="container">
+        <div class="mx-auto mt-5" style="max-width: 400px;">
+            <h1 class="h3 mb-3 font-weight-normal text-center">User</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ user.Nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ user.Prenom }}</td>
-            </tr>
-        </tbody>
-    </table>
+            <table class="table">
+                <tbody>
+                <tr>
+                    <th>Email</th>
+                    <td>{{ user.email }}</td>
+                </tr>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <tr>
+                        <th>Roles</th>
+                        <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                    </tr>
+                {% endif %}
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ user.Nom }}</td>
+                </tr>
+                <tr>
+                    <th>Prenom</th>
+                    <td>{{ user.Prenom }}</td>
+                </tr>
+                </tbody>
+            </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+            <div class="row">
+                {% if is_granted('ROLE_ADMIN') %}
+                <div class="col">
+                    <a href="{{ path('app_user_index') }}" class="btn btn-dark btn-block mt-3">Administration</a>
+                </div>
+                {% endif %}
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                <div class="col">
+                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-primary btn-block mt-3">Edit</a>
+                </div>
 
-    {{ include('user/_delete_form.html.twig') }}
+                <div class="col">
+                    <a href="{{ path('app_logout') }}" class="btn btn-primary btn-danger mt-3">Deconnexion</a>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <h4 class="text-center">Listes des commandes passées </h4>
+        <a href="{{ path('app_panier_show',{'id': user.id}) }}" class="btn btn-primary btn-danger mt-3">Deconnexion</a>
+
+
+    </div>
 {% endblock %}
