--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                         </li>
                         {% if app.user %}
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Mon panier</a>
+                                <a class="nav-link" href="{{ path('app_panier_show') }}">Mon panier</a>
                             </li>
                         {% endif %}
                     </ul>
