--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -3,29 +3,60 @@
 {% block title %}Panier{% endblock %}
 
 {% block body %}
-    <h1>Panier</h1>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Mon Panier</h1>
 
-    {% if panier is not empty %}
-        <table class="table">
-            <tbody>
+        {% if panier is not empty %}
+            <table class="table">
+                <thead>
                 <tr>
-                    <th>Id</th>
-                    <td>{{ panier.id }}</td>
+                    <th scope="col">Image</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Prix</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Quantité</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">Actions</th>
                 </tr>
-                <tr>
-                    <th>DateAchat</th>
-                    <td>{{ panier.dateAchat ? panier.dateAchat|date('Y-m-d H:i:s') : '' }}</td>
-                </tr>
-                <tr>
-                    <th>Etat</th>
-                    <td>{{ panier.etat ? 'Yes' : 'No' }}</td>
-                </tr>
-            </tbody>
-        </table>
-    {% else %}
-        <p>Votre panier est vide ! </p>
-        <a href="{{ path('app_accueil') }}">Commencer vos achats</a>
-    {% endif %}
-
-
+                </thead>
+                <tbody>
+                {% set total = 0 %}
+                {% for contenu in panier.contenuPaniers %}
+                    <tr>
+                        <td>
+                            {% if contenu.produit.Photo is not null %}
+                                <img src="{{ asset('uploads/images/' ~ contenu.produit.Photo) }}" style="width:100px;" alt="">
+                            {% endif %}
+                        </td>
+                        <td>{{ contenu.produit.nom }}</td>
+                        <td>{{ contenu.produit.prix }}€</td>
+                        <td>{{ contenu.produit.description }}</td>
+                        <td>{{ contenu.quantite }}</td>
+                        <td>{{ contenu.date|date('d-m-Y') }}</td>
+                        <td>{{ contenu.produit.prix * contenu.quantite }}€</td>
+                        <td>
+                            <a href="{{ path('app_panier_remove', {'id': contenu.produit.id}) }}" class="btn btn-dark">🗑️</a>
+                            {# <a href="{{ path('app_panier_deleteLine') }}" class="btn btn-dark">❌</a> #}
+                            <a href="{{ path('app_produit_show', {'id': contenu.produit.id}) }}" class="btn btn-dark">👀</a>
+                        </td>
+                    </tr>
+                    {% set total = total + contenu.produit.prix * contenu.quantite %}
+                {% endfor %}
+                </tbody>
+            </table>
+            <div class="d-flex justify-content-evenly">
+                <h5>Total à payer </h5>
+                <h5>{{ total }}€</h5>
+            </div>
+            <div class="d-flex justify-content-center">
+                <a href="{{ path('app_accueil') }}" class="btn btn-dark">Continuer</a>
+            </div>
+        {% else %}
+            <div class="alert alert-info" role="alert">
+                Votre panier est vide !
+            </div>
+            <a href="{{ path('app_accueil') }}" class="btn btn-primary">Commencer vos achats</a>
+        {% endif %}
+    </div>
 {% endblock %}
