[In Progress] add comments controller

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}PearPhone{% endblock %}
 
 {% block stylesheets %}
-    {{ parent() }} <!-- Si vous utilisez des feuilles de style définies dans le fichier 'base.html.twig' -->
+    {{ parent() }}
     <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
 {% endblock %}
 
