[In Progress] add comments

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,6 +13,7 @@
     <h1>PearPhone</h1>
 </div>
 
+{# This Twig file creates a basic layout for displaying products with their names, images and prices on the "PearPhone" home page. #}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
