--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Panier index</h1>
 
+{# This Twig file generates a simple layout to display a list of baskets with their details (ID, purchase date, status) and provides links to view and edit each basket. It also provides a link to create a new basket. #}
     <table class="table">
         <thead>
             <tr>
