--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -6,6 +6,7 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">Mon Panier</h1>
 
+        {# This Twig file is designed to display the detailed contents of a shopping cart. It presents the products included in the shopping cart with their details, and offers features for interacting with each product, as well as options for browsing or continuing shopping. #}
         {% if panier is not empty %}
             <table class="table">
                 <thead>
