--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,20 +3,33 @@
 {% block title %}Editer un utilisateur{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="mx-auto mt-5" style="max-width: 400px;">
+    <div class="container mt-5">
+        <div class="mx-auto" style="max-width: 400px;">
             <h1 class="h3 mb-3 font-weight-normal text-center">Editer un utilisateur</h1>
 
             {{ form_start(form) }}
 
             <div class="form-group">
-                {{ form_widget(form, { 'attr': {'class': 'form-control'} }) }}
+                {{ form_row(form.email, {'attr': {'class': 'form-control', 'placeholder': 'Email'}}) }}
             </div>
+
+            <div class="form-group">
+                {{ form_row(form.Nom, {'attr': {'class': 'form-control', 'placeholder': 'Nom'}}) }}
+            </div>
+
+            <div class="form-group">
+                {{ form_row(form.Prenom, {'attr': {'class': 'form-control', 'placeholder': 'Prénom'}}) }}
+            </div>
+
+            {% if is_granted('ROLE_ADMIN') %}
+                <div class="form-group">
+                    {{ form_row(form.roles, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            {% endif %}
 
             <button type="submit" class="btn btn-lg btn-primary btn-block mt-3">Mettre à jour</button>
 
             {{ form_end(form) }}
-
         </div>
     </div>
 {% endblock %}
