--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -44,6 +44,6 @@
             </tbody>
         </table>
 
-        <a href="{{ path('app_admin') }}" class="btn btn-primary">Retour au Dashboard</a>
+        <a href="{{ path('app_admin') }}" class="btn btn-dark">Retour au Dashboard</a>
     </div>
 {% endblock %}
