--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -27,7 +27,7 @@
                 </div>
             {% endif %}
 
-            <button type="submit" class="btn btn-lg btn-primary btn-block mt-3">Mettre à jour</button>
+            <button type="submit" class="btn btn-lg btn-dark btn-block mt-3">Mettre à jour</button>
 
             {{ form_end(form) }}
         </div>
