--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -68,12 +68,12 @@
                 <div class="alert alert-info" role="alert">
                     Votre panier est vide !
                 </div>
-                <a href="{{ path('app_accueil') }}" class="btn btn-primary">Commencer vos achats</a>
+                <a href="{{ path('app_accueil') }}" class="btn btn-dark">Commencer vos achats</a>
             </div>
         {% endif %}
-
+        <br>
         {% if is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('app_panier_index') }}" class="btn btn-primary">Retour à la liste des paniers</a>
+            <a href="{{ path('app_panier_index') }}" class="btn btn-dark">Retour à la liste des paniers</a>
         {% endif %}
     </div>
 {% endblock %}
