--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -3,41 +3,49 @@
 {% block title %}Produit{% endblock %}
 
 {% block body %}
-    <h1>Produit</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ produit.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ produit.Nom }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ produit.Description }}</td>
-            </tr>
-            <tr>
-                <th>Prix</th>
-                <td>{{ produit.Prix }}</td>
-            </tr>
-            <tr>
-                <th>Stock</th>
-                <td>{{ produit.Stock }}</td>
-            </tr>
-            <tr>
-                <th>Photo</th>
-                <td>{{ produit.Photo }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a class="nav-link" href="{{ path('app_panier_add', {'id': produit.id}) }}">Ajouter au panier</a>
-
-    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_index') }}'">Back to list</button>
-    <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_edit', {'id': produit.id}) }}'">Edit</button>
-
-    {{ include('produit/_delete_form.html.twig') }}
+<br>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="card-title text-center">Produit</h1>
+                    </div>
+                    <div class="card-body">
+                        <table class="table">
+                            <tbody>
+                                <tr>
+                                    <th>Id</th>
+                                    <td>{{ produit.id }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Nom</th>
+                                    <td>{{ produit.Nom }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Description</th>
+                                    <td>{{ produit.Description }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Prix</th>
+                                    <td>{{ produit.Prix }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Stock</th>
+                                    <td>{{ produit.Stock }}</td>
+                                </tr>
+                                <tr>
+                                    <th>Photo</th>
+                                    <td>{{ produit.Photo }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="card-footer text-center">
+                        <a type="button" class="btn btn-dark" href="{{ path('app_panier_add', {'id': produit.id}) }}">Ajouter au panier</a>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </div>
 {% endblock %}
