--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -38,6 +38,6 @@
             </tbody>
         </table>
 
-        <a href="{{ path('app_admin') }}" class="btn btn-primary">Retour au Dashboard</a>
+        <a href="{{ path('app_admin') }}" class="btn btn-dark">Retour au Dashboard</a>
     </div>
 {% endblock %}
