--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -38,12 +38,12 @@
                 {% endif %}
 
                 <div class="col">
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-primary btn-block mt-3">Edit</a>
+                    <a href="{{ path('app_user_edit', {'id': user.id}) }}" class="btn btn-dark btn-block mt-3">Edit</a>
                 </div>
 
                 {% if app.user == user %}
                     <div class="col">
-                        <a href="{{ path('app_logout') }}" class="btn btn-primary btn-danger mt-3">Deconnexion</a>
+                        <a href="{{ path('app_logout') }}" class="btn btn-dark btn-danger mt-3">Deconnexion</a>
                     </div>
                 {% endif %}
             </div>
