[Feature] style/correction

--- a/public/accueil.css
+++ b/public/accueil.css
@@ -9,3 +9,13 @@
     box-shadow: 2px 4px 12px rgba(0,0,0,.08);
     transition: all .3s cubic-bezier(0,0,.5,1);
 }
+
+
+
+.nav-link{
+    color: #54BA36;
+}
+
+.btn-dark:hover{
+    color: #54BA36;
+}
