--- a/templates/produit/_form.html.twig
+++ b/templates/produit/_form.html.twig
@@ -1,3 +1,8 @@
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
+{% endblock %}
+
 {{ form_start(form) }}
     {{ form_widget(form) }}
     {# <button class="btn">{{ button_label|default('Save') }}</button> #}
