--- a/templates/panier/show.html.twig
+++ b/templates/panier/show.html.twig
@@ -2,6 +2,12 @@
 
 {% block title %}Panier{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('/panier.css') }}">
+    <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
+{% endblock %}
+
 {% block body %}
     <div class="container mt-5">
         <h1 class="text-center mb-4">Mon Panier</h1>
@@ -10,7 +16,7 @@
         {% if panier is not empty %}
             {% if is_granted('ROLE_ADMIN') %}
                 <div class="text-center">
-                    Panier de <a href="{{ path('app_user_show',{'id':panier.user.id}) }}">
+                    Panier de <a href="{{ path('app_user_show',{'id':panier.user.id}) }}" class="no-decoration">
                         {{ panier.user.nom ~ " " ~ panier.user.prenom }}
                     </a>
                     <hr>
