--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Edit Produit{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
+{% endblock %}
+
 {% block body %}
     <div class="container">
             <div class="mx-auto mt-5" style="max-width: 400px;">
