--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Produit{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
+{% endblock %}
+
 {% block body %}
 <br>
     <div class="container">
