--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Liste des Utilisateurs{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('/accueil.css') }}">
+{% endblock %}
+
 {% block body %}
     <div class="container mt-5">
         <h1 class="mb-4">Liste des Utilisateurs</h1>
