:sparkles: [Feature] - add order + finish cart + finish dashboard admin + optimize front

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -16,13 +16,23 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card mb-4">
             <div class="card-header">
                 <h5 class="mb-0">Liste des paniers non vendus</h5>
             </div>
             <div class="card-body">
                 <p class="card-text">Voir tous les paniers non vendus.</p>
                 <a href="{{ path('app_panier_index') }}" class="btn btn-primary">Voir les paniers non vendus</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <h5 class="mb-0">Liste des produits</h5>
+            </div>
+            <div class="card-body">
+                <p class="card-text">Voir tous les produits.</p>
+                <a href="{{ path('app_produit_index') }}" class="btn btn-primary">Voir les produits</a>
             </div>
         </div>
     </div>
