--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -46,5 +46,8 @@
         </table>
 
         <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_new') }}'">Créer Nouveau</button>
+
+        <a href="{{ path('app_admin') }}" class="btn btn-primary">Retour au Dashboard</a>
+
     </div>
 {% endblock %}
