--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -14,25 +14,29 @@
 </div>
 
 {# This Twig file creates a basic layout for displaying products with their names, images and prices on the "PearPhone" home page. #}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="row">
-                {% for produit in produits %}
-                    {% if produit.Photo is not null %}
-                            <div class="col-md-4 mb-4">
-                                <a href="{{ path('app_produit_show', { 'id': produit.id }) }}" class="text-decoration-none">
-                                    <div class="card h-100 shadow">
-                                        <div class="card-body text-center d-flex flex-column">
-                                            <h5 class="card-title mb-0">{{ produit.Nom }}</h5>
-                                            <img src="{{ asset('uploads/images/' ~ produit.Photo) }}" class="card-img-top mt-3 flex-grow-1" alt="...">
-                                            <p class="card-text text-muted mt-3">{{ produit.Prix }} €</p>
+    <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="row">
+                        {% for produit in produits %}
+                            {% if produit.Photo is not null %}
+                                <div class="col-md-6 mb-4">
+                                    <a href="{{ path('app_produit_show', { 'id': produit.id }) }}" class="text-decoration-none">
+                                        <div class="card h-100 shadow">
+                                            <div class="style-card">
+                                                <div class="card-body text-center d-flex flex-column">
+                                                    <h5 class="card-title mb-0">{{ produit.Nom }}</h5>
+                                                    <img src="{{ asset('uploads/images/' ~ produit.Photo) }}" class="card-img-top mt-3 flex-grow-1" alt="...">
+                                                    <p class="card-text text-muted mt-3">{{ produit.Prix }} €</p>
+                                                </div>
+                                            </div>
                                         </div>
-                                    </div>
-                                </a>
-                            </div>
-                    {% endif %}
-                {% endfor %}
+                                    </a>                               
+                                </div> 
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
