--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -8,49 +8,41 @@
 {% endblock %}
 
 {% block body %}
-<br>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header">
-                        <h1 class="card-title text-center">Produit</h1>
+    <div class="container mt-5">
+        <div class="card">
+            <h1 class="card-title text-center mt-3 mb-0">Produit</h1>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="{{ asset('uploads/images/' ~ produit.Photo) }}" class="img-fluid" alt="Photo du produit">
                     </div>
-                    <div class="card-body">
+                    <div class="col-md-6">
                         <table class="table">
                             <tbody>
                                 <tr>
-                                    <th>Id</th>
-                                    <td>{{ produit.id }}</td>
-                                </tr>
-                                <tr>
-                                    <th>Nom</th>
+                                    <th scope="row">Nom</th>
                                     <td>{{ produit.Nom }}</td>
                                 </tr>
                                 <tr>
-                                    <th>Description</th>
-                                    <td>{{ produit.Description }}</td>
-                                </tr>
-                                <tr>
-                                    <th>Prix</th>
+                                    <th scope="row">Prix</th>
                                     <td>{{ produit.Prix }}</td>
                                 </tr>
                                 <tr>
-                                    <th>Stock</th>
+                                    <th scope="row">Stock</th>
                                     <td>{{ produit.Stock }}</td>
                                 </tr>
                                 <tr>
-                                    <th>Photo</th>
-                                    <td>{{ produit.Photo }}</td>
+                                    <th scope="row">Description</th>
+                                    <td>{{ produit.Description }}</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                    <div class="card-footer text-center">
-                        <a type="button" class="btn btn-dark" href="{{ path('app_panier_add', {'id': produit.id}) }}">Ajouter au panier</a>
-                    </div>
                 </div>
             </div>
-        </div>  
+            <div class="card-footer text-right">
+                <a type="button" class="btn btn-dark" href="{{ path('app_panier_add', {'id': produit.id}) }}">Ajouter au panier</a>
+            </div>
+        </div>
     </div>
 {% endblock %}
