--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -32,7 +32,7 @@
             </div>
             <div class="card-body">
                 <p class="card-text">Voir tous les produits.</p>
-                <a href="{{ path('app_produit_index') }}" class="btn btn-primary">Voir les produits</a>
+                <a href="{{ path('app_produit_index') }}" class="btn btn-dark">Voir les produits</a>
             </div>
         </div>
     </div>
