--- a/templates/panier/order.html.twig
+++ b/templates/panier/order.html.twig
@@ -67,7 +67,7 @@
                 <div class="alert alert-info" role="alert">
                     Votre commande est vide... (comment êtes-vous arrivé ici?)
                 </div>
-                <a href="{{ path('app_accueil') }}" class="btn btn-primary">Commencer vos achats</a>
+                <a href="{{ path('app_accueil') }}" class="btn btn-dark">Commencer vos achats</a>
             </div>
         {% endif %}
     </div>
