--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -13,7 +13,7 @@
             <h1 class="card-title text-center mt-3 mb-0">Produit</h1>
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <img src="{{ asset('uploads/images/' ~ produit.Photo) }}" class="img-fluid" alt="Photo du produit">
                     </div>
                     <div class="col-md-6">
@@ -40,9 +40,15 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer text-right">
-                <a type="button" class="btn btn-dark" href="{{ path('app_panier_add', {'id': produit.id}) }}">Ajouter au panier</a>
-            </div>
+            {% if is_granted('ROLE_USER') %}
+                <div class="card-footer text-right">
+                    <a href="{{ path('app_panier_add', {'id': produit.id}) }}" class="btn btn-dark" >Ajouter au panier</a>
+                    {%if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('app_produit_edit', {'id': produit.id}) }}" class="btn btn-dark">Éditer</a>
+                        <a href="{{ path('app_produit_delete', {'id': produit.id}) }}" class="btn btn-dark">Supprimer</a>
+                    {% endif %}
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
