--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -52,7 +52,7 @@
 
         <button type="button" class="btn btn-dark" onclick="window.location.href='{{ path('app_produit_new') }}'">Créer Nouveau</button>
 
-        <a href="{{ path('app_admin') }}" class="btn btn-primary">Retour au Dashboard</a>
+        <a href="{{ path('app_admin') }}" class="btn btn-dark">Retour au Dashboard</a>
 
     </div>
 {% endblock %}
